regression/generic/simple.smt2.expected.out
At line 22: syntax error, unexpected TK_NUM, expecting ')'
